--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "darkaonline/l5-swagger": "^8.5",
+        "egulias/email-validator": "^4.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "shetabit/token-builder": "^2.0",
         "spatie/laravel-query-builder": "^5.7",
-        "tightenco/collect": "^9.52"
+        "tightenco/collect": "^9.52",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
